--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -4,10 +4,13 @@ on:
   push:
     tags:
       - '*'
+      
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      working-directory: src
 
     steps:
       - name: Checkout code
