--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,12 +23,15 @@ jobs:
           dotnet-version: 8.0.x
 
       - name: Restore dependencies
+        working-directory: ${{env.working-directory}}
         run: dotnet restore
 
       - name: Build
+        working-directory: ${{env.working-directory}}
         run: dotnet build --configuration Release
 
       - name: Pack
+        working-directory: ${{env.working-directory}}
         run: dotnet pack --configuration Release --output ./output
 
       - name: Publish to GitHub Packages
